--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.97"
-csv = "1.3.1"
 num-traits = "0.2.19"
+syn = "2.0.100"
 thiserror = "2.0.12"
 
 [dev-dependencies]
